# vim-cocoa

./: .gitignore  README.markdown
src/: CMakeLists.txt  Info.plist.in  Makefile  README.markdown  bootstrap.sh  config.h.cmakein  configure.in  feature.h  gui.c  gui.h  gui_mac.m  main.c  menu.c  option.c  option.h  os_mac.h  os_mac_conv.c  os_macosx.m  os_unix.c  os_unix.h  pathdef.c.in  proto.h  structs.h  version.c  vim.h  window.c
src/mac/: gvim
src/mac/PSMTabBarControl.framework/Versions/A/: PSMTabBarControl
src/mac/PSMTabBarControl.framework/Versions/A/Headers/: PSMTabBarControl.h
src/mac/PSMTabBarControl.framework/Versions/A/Resources/: Info.plist
src/mac/PSMTabBarControl/PSMTabBarControl.xcodeproj/: project.pbxproj
src/mac/PSMTabBarControl/source/: NSBezierPath_AMShading.m  PSMTabBarControl.m
src/proto/: gui_cocoa.pro
